RESOLVED FIXED18780
REGRESSION(31916-31981): CanvasRenderingElement::drawImage fails when drawing self
https://bugs.webkit.org/show_bug.cgi?id=18780
Summary REGRESSION(31916-31981): CanvasRenderingElement::drawImage fails when drawing...
Oliver Hunt
Reported 2008-04-28 02:59:19 PDT
A canvas can no long draw itself into its own buffer, this is used for a number of "accumulator"-esque graphical effects and so represents a significant regression My guess is this is due to http://trac.webkit.org/changeset/31961, although i cannot be sure
Attachments
Test case (414 bytes, text/html)
2008-04-28 02:59 PDT, Oliver Hunt
no flags
Patch to fix bug (15.54 KB, patch)
2008-04-28 12:14 PDT, Dave Hyatt
mitz: review+
Oliver Hunt
Comment 1 2008-04-28 02:59:57 PDT
Created attachment 20864 [details] Test case
Dave Hyatt
Comment 2 2008-04-28 12:14:10 PDT
Created attachment 20876 [details] Patch to fix bug
mitz
Comment 3 2008-04-28 12:16:32 PDT
Comment on attachment 20876 [details] Patch to fix bug r=me
Dave Hyatt
Comment 4 2008-04-28 12:17:43 PDT
Fixed in r32655.
Note You need to log in before you can comment on or make changes to this bug.