WebCore:

2008-04-28  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=18780

        Canvas can't draw itself into its own buffer.  Make sure the dirtying call comes after the image()
        has been accessed.  Technically willDraw should be renamed to didDraw and all calls should be moved
        to after draws have occurred (since if the draw op itself wants to reference the image it shouldn't get
        a dirty copy either), but I'll take that up with olliej when he wakes up. :)

        Reviewed by Dan Bernstein

        Added fast/canvas/canvasDrawsIntoSelf.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):

LayoutTests:

2008-04-28  David Hyatt  <hyatt@apple.com>

        Add layout test for canvas self-drawing bug.

        Reviewed by Dan Bernstein

        * fast/canvas/canvasDrawingIntoSelf.html: Added.
        * platform/mac/fast/canvas/canvasDrawingIntoSelf-expected.checksum: Added.
        * platform/mac/fast/canvas/canvasDrawingIntoSelf-expected.png: Added.
        * platform/mac/fast/canvas/canvasDrawingIntoSelf-expected.txt: Added.



Canonical link: https://commits.webkit.org/25933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32655 268f45cc-cd09-0410-ab3c-d52691b4dbfc