WebCore/html/CanvasRenderingContext2D.cpp
@@ -1022,8 +1022,9 @@ void CanvasRenderingContext2D::drawImage(HTMLCanvasElement* canvas, const FloatR
     if (!canvas->originClean())
         m_canvas->setOriginTainted();
 
-    willDraw(destRect);
     c->drawImage(buffer->image(), destRect, sourceRect);
+    willDraw(destRect); // This call comes after drawImage, since the buffer we draw into may be our own, and we need to make sure it is dirty.
+                        // FIXME: Arguably willDraw should become didDraw and occur after drawing calls and not before them to avoid problems like this.
 }
 
 // FIXME: Why isn't this just another overload of drawImage? Why have a different name?
